--- a/jimdo.html
+++ b/jimdo.html
@@ -50,7 +50,7 @@
     <div class="radio-section">
       <div class="radio-title">Radio 1 - Rock</div>
       <audio controls>
-        <source src="http://TU_SERVIDOR:8000/radio1" type="audio/mpeg">
+        <source src="http://guialocaldolores.com.ar/acp/español" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
     </div>
