--- a/jimdo.html
+++ b/jimdo.html
@@ -46,11 +46,11 @@
 </head>
 <body>
   <div class="radio-block">
-    <h2>Escuchá Nuestras Radios</h2>
+    <h2>Escuchá siempre tu estilo preferido</h2>
     <div class="radio-section">
-      <div class="radio-title">Radio 1 - Rock</div>
+      <div class="radio-title">español</div>
       <audio controls>
-        <source src="http://guialocaldolores.com.ar/acp/español" type="audio/mpeg">
+        <source src="http://miradio.no-ip.org:8000/español" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
     </div>
