--- a/jimdo.html
+++ b/jimdo.html
@@ -50,7 +50,7 @@
     <div class="radio-section">
       <div class="radio-title">español</div>
       <audio controls>
-        <source src="http://miradio.no-ip.org:8000/español" type="audio/mpeg">
+        <source src="http://acpradio.ddns.net:8000/español" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
     </div>
