--- a/jimdo.html
+++ b/jimdo.html
@@ -48,9 +48,9 @@
   <div class="radio-block">
     <h2>Escuchá siempre tu estilo preferido</h2>
     <div class="radio-section">
-      <div class="radio-title">español</div>
+      <div class="radio-title">Música en tu idioma</div>
       <audio controls>
-        <source src="http://acpradio.ddns.net:8000/español" type="audio/mpeg">
+        <source src="http://acpradio.ddns.net:8000/espanol" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
     </div>
