--- a/jimdo.html
+++ b/jimdo.html
@@ -57,6 +57,7 @@
     <div class="radio-section">
       <div class="radio-title">Radio 2 - Pop</div>
       <audio controls>
+        <!-- Reemplaza "TU_SERVIDOR" y "radio2" cuando tengas la emisora configurada -->
         <source src="http://TU_SERVIDOR:8000/radio2" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
@@ -64,6 +65,7 @@
     <div class="radio-section">
       <div class="radio-title">Radio 3 - Clásicos</div>
       <audio controls>
+        <!-- Reemplaza "TU_SERVIDOR" y "radio3" cuando tengas la emisora configurada -->
         <source src="http://TU_SERVIDOR:8000/radio3" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
@@ -71,6 +73,7 @@
     <div class="radio-section">
       <div class="radio-title">Radio 4 - Electrónica</div>
       <audio controls>
+        <!-- Reemplaza "TU_SERVIDOR" y "radio4" cuando tengas la emisora configurada -->
         <source src="http://TU_SERVIDOR:8000/radio4" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
@@ -78,6 +81,7 @@
     <div class="radio-section">
       <div class="radio-title">Radio 5 - Noticias</div>
       <audio controls>
+        <!-- Reemplaza "TU_SERVIDOR" y "radio5" cuando tengas la emisora configurada -->
         <source src="http://TU_SERVIDOR:8000/radio5" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
       </audio>
